Add attribution for moose images

--- a/app/index.html
+++ b/app/index.html
@@ -17,3 +17,6 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<!-- 
+  Moose images fmoose.png, moose.png and calf.png adapted from https://pngimg.com/image/66249 under the Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://pngimg.com/license)  -->
